fixed envato soft reject second time about responsive and spacing and aligment changes

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1840,8 +1840,6 @@ a:focus {
     position: relative;
     top: 50%;
     left: 50%;
-    margin-top: -50px;
-    margin-left: -20px;
     width: 100px;
     height: 40px;
     transform: translate(-50%, -50%);
